# sapien-robot

./: .gitignore  LICENSE  README.md  ruff.toml  sapien-demo.ipynb  sapien-setup.ipynb
Notebooks/: sapien-robot.ipynb  sapien-setup.ipynb
experiments/: DebuggingSequence.ipynb  demo-explore.py  demo-fixed-actions.py  demo-ppo.py  demo-sampled-action.py  run-demo-ppo.sh
experiments/ppo/: DebuggingPolicy.ipynb  agent.py  evaluate.py  notes.md  train-ppo.py
sapien-poc/: robot_recorder.py  terrain_env.py  test.py  tfwheel_bot.py  tw_robot.py
sapien-poc/basic_rl/: demo.py  terrain_env.py  tw_robot.py
sapien-poc/basic_rl/terrain/: Terrain.stl
sapien-poc/mani_test/: demo.ipynb  demo.py  process_render_output.py  terrain_env.py  tw_robot.py
sapien-poc/mani_test/terrain/: Terrain.glb
sapien-poc/puregym_test/: demo.py
sapien-poc/rma_test/: cfg.yaml  demo.ipynb  demo.py  module.py  ppo.py  raisim_gym_helper.py  storage.py  terrain_env.py  tw_robot.py
sapien-poc/tutorials/: README.txt
sapien-poc/tutorials/cpusim/: demo.py
sapien-poc/tutorials/gpusim/: README.txt  demo.py
sapien-poc/tutorials/obs_ctl/: demo.py
sapien-poc/tutorials/recording/: README.txt  demo.py
sapien-poc/tutorials/rl/: commands.txt  ppo.py  ppo_fast.py
sim/envs/: terrain.py
sim/robots/: transwheel.py
twsim/: README.md  pyproject.toml  test.py
twsim/src/twsim/: __init__.py  utils.py
twsim/src/twsim/envs/: __init__.py  plane.py  planevel.py  planevelsensor.py  stepvel.py  stepvelsensor.py  terrain.py
twsim/src/twsim/robots/: transwheel.py
(+3 files in other folders)
