[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["twsim"]
package-dir = { "" = "src" }

[project]
name = "twsim"
version = "0.1.0"
description = "A simulation package for the transformable wheel robots."
authors = [ { name = "Anthony J. Clark" } ]
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# [project.dependencies]
# Add your dependencies here, e.g., numpy = "*", scipy = "*"
